[package]
name = "Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
data-encoding = "2.9.0"
futures-lite = "2.6.0"
iroh = "0.35.0"
iroh-gossip = "0.35.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
